Initialize drawing card

--- a/project2/index.html
+++ b/project2/index.html
@@ -44,9 +44,9 @@
 			<div class="Stats">
 				<div class="Fire Point"></div>
 				<div class="Water Point"></div>
-				<div class="Avatar"></div>
+				<div class="Avatar FlexCenter"></div>
 				<div class="Earth Point"></div>
-				<div class="Wind Point"></div>
+				<div class="Aero Point"></div>
 			</div>
 		</div>
 
@@ -54,9 +54,9 @@
 			<div class="Stats">
 				<div class="Fire Point"></div>
 				<div class="Water Point"></div>
-				<div class="Avatar"></div>
+				<div class="Avatar FlexCenter"></div>
 				<div class="Earth Point"></div>
-				<div class="Wind Point"></div>
+				<div class="Aero Point"></div>
 			</div>
 			<div class="Equipment"></div>
 			<div class="Hand"></div>
