Initialize NPC random playing behavior

--- a/project2/index.html
+++ b/project2/index.html
@@ -40,7 +40,7 @@
 
 		<div id="NPCSide" class="HalfPlayingBoard">
 			<div class="Hand"></div>
-			<div class="Equipment"></div>
+			<div class="Equipment FlexCenter"></div>
 			<div class="Stats">
 				<div class="Fire Point"></div>
 				<div class="Water Point"></div>
@@ -58,7 +58,7 @@
 				<div class="Earth Point"></div>
 				<div class="Aero Point"></div>
 			</div>
-			<div class="Equipment"></div>
+			<div class="Equipment FlexCenter"></div>
 			<div class="Hand"></div>
 		</div>
 
