--- a/project2/index.html
+++ b/project2/index.html
@@ -40,7 +40,7 @@
 
 		<div id="NPCSide" class="HalfPlayingBoard">
 			<div class="Hand"></div>
-			<div class="Equipment FlexCenter"></div>
+			<div class="Equipment FlexSpaceAround"></div>
 			<div class="Stats">
 				<div class="Fire Point"></div>
 				<div class="Water Point"></div>
@@ -58,7 +58,7 @@
 				<div class="Earth Point"></div>
 				<div class="Aero Point"></div>
 			</div>
-			<div class="Equipment FlexCenter"></div>
+			<div class="Equipment FlexSpaceAround"></div>
 			<div class="Hand"></div>
 		</div>
 
@@ -67,7 +67,6 @@
 	<section id="RightColumn" class="FlexCenter">
 		<div id="CentralDeck"></div>
 	</section>
-
 
 	<footer class="Fixed FlexCenter">
 		<div id="Copyright">
