everything seems to be working

--- a/project2/index.html
+++ b/project2/index.html
@@ -40,7 +40,7 @@
 
 		<div id="NPCSide" class="HalfPlayingBoard">
 			<div class="Hand"></div>
-			<div class="Equipment FlexSpaceAround"></div>
+			<div class="Equipment FlexCenter"></div>
 			<div class="Stats">
 				<div class="Fire Point"></div>
 				<div class="Water Point"></div>
@@ -58,14 +58,16 @@
 				<div class="Earth Point"></div>
 				<div class="Aero Point"></div>
 			</div>
-			<div class="Equipment FlexSpaceAround"></div>
+			<div class="Equipment FlexCenter"></div>
 			<div class="Hand"></div>
 		</div>
 
 	</section>
 
 	<section id="RightColumn" class="FlexCenter">
+		<div id="NPCWins"></div>
 		<div id="CentralDeck"></div>
+		<div id="PlayerWins"></div>
 	</section>
 
 	<footer class="Fixed FlexCenter">
