--- a/project2/documentation.html
+++ b/project2/documentation.html
@@ -37,9 +37,18 @@
 			</h2>
 			<hr/>
 			<ul>
-				<li>Using localstorage browser API to remember the state of a previous game.</li>
-				<li> The logo for the favicon is my design. I created it using <a href="https://github.com/piskelapp/piskel">Piskel</a> </li>
-				<li> I produced most of the concept arts used for card images.</li>
+				<li>
+					The game uses the Promise API, thus will only work on browser in this <a href="https://caniuse.com/promises/embed/agents=desktop">chart</a>
+				</li>
+				<li>
+					I used localstorage browser API to remember the state of a previous game.
+				</li>
+				<li>
+					The logo for the favicon is my design. I created it using <a href="https://github.com/piskelapp/piskel">Piskel</a>
+				</li>
+				<li>
+					The  card images were fetch from Giphy.com, using keywords associated with each element.
+				</li>
 				<li> License notice was taken from <a href="https://louisgv.github.io/a-jekyll-blog/">my blog</a>, which is also my design. </li>
 			</ul>
 		</article>
@@ -50,9 +59,13 @@
 			</h2>
 			<hr/>
 			<ul>
-				<li>Open Iconic — www.useiconic.com/open</li>
-				<li>https://codepen.io/nrdobie/pen/ijxqz?limit=all&page=4&q=card</li>
-				<li>https://codepen.io/jackrugile/pen/WZGeGM</li>
+				<li>
+					Open Iconic — <a href="https://www.useiconic.com/open">website</a>
+				</li>
+				<li>
+					Giphy  — <a href="https://giphy.com/">website</a>
+				</li>
+
 			</ul>
 		</article>
 
@@ -62,7 +75,24 @@
 			</h2>
 			<hr/>
 			<ul>
-				<li> Wed Oct 11 2017: Initialize the project</li>
+				<li>
+					10/23/2017:
+					Refactor code and add Giphy API
+				</li>
+				<li>
+					10/20/2017:
+					Adding NPC playing behavior
+				</li>
+				<li>
+					10/19/2017: Init hero choosing modal and nav interface
+				</li>
+				<li>
+					10/16/2017:
+					Initialize card drawing, hand limitting, and playing card
+				</li>
+				<li>
+					10/11/2017: 	Initialize the project
+				</li>
 			</ul>
 		</article>
 
