--- a/project2/documentation.html
+++ b/project2/documentation.html
@@ -38,16 +38,22 @@
 			<hr/>
 			<ul>
 				<li>
-					The game uses the Promise API, thus will only work on browser in this <a href="https://caniuse.com/promises/embed/agents=desktop">chart</a>
+					The game uses the async/await syntax, thus will only works on browser in this <a href="https://caniuse.com/#feat=fetch">chart</a>
 				</li>
 				<li>
-					I used localstorage browser API to remember the state of a previous game.
+					The game uses the Promise API, thus will only works on browser in this <a href="https://caniuse.com/promises/embed/agents=desktop">chart</a>
+				</li>
+				<li>
+					The game uses the fetch API, thus will only works on browser in this <a href="https://caniuse.com/promises/embed/agents=desktop">chart</a>
+				</li>
+				<li>
+					The game uses localstorage browser API to cache the state of the game as well as a giphy database.
 				</li>
 				<li>
 					The logo for the favicon is my design. I created it using <a href="https://github.com/piskelapp/piskel">Piskel</a>
 				</li>
 				<li>
-					The  card images were fetch from Giphy.com, using keywords associated with each element.
+					The card images were fetch from Giphy.com, using keywords associated with each element.
 				</li>
 				<li> License notice was taken from <a href="https://louisgv.github.io/a-jekyll-blog/">my blog</a>, which is also my design. </li>
 			</ul>
