--- a/project2/index.html
+++ b/project2/index.html
@@ -88,7 +88,6 @@
 
 	<!-- Board section controller -->
 	<script src="./src/card.js" charset="utf-8"></script>
-	<script src="./src/equip.js" charset="utf-8"></script>
 
 	<!-- Player behavior -->
 	<script src="./src/hero-selection.js" charset="utf-8"></script>
@@ -98,7 +97,12 @@
 
 	<!-- Setup script -->
 	<script src="./src/setup.js" charset="utf-8"></script>
+
+	<script src="./src/combat.js" charset="utf-8"></script>
+
 	<script src="./src/game.js" charset="utf-8"></script>
+
+	<!-- Footer controller -->
 	<script src="./src/copyright-hiding.js" charset="utf-8"></script>
 </body>
 
