Adding rule page

--- a/project2/index.html
+++ b/project2/index.html
@@ -30,6 +30,10 @@
 			<h3>play</h3>
 			<span class="oi" data-glyph="media-stop"></span>
 		</a>
+		<a class="InterfaceButton" href="./rule.html">
+			<h3>rule</h3>
+			<span class="oi" data-glyph="book"></span>
+		</a>
 		<a class="InterfaceButton" href="./documentation.html">
 			<h3>doc</h3>
 			<span class="oi" data-glyph="document"></span>
