Initialize score calculation

--- a/project2/rule.html
+++ b/project2/rule.html
@@ -132,7 +132,7 @@
 				 	<strong> Ether Nullification: </strong> The remaining ETHER point will be used to subtract from the element with the highest point on the opposite side.
 				</li>
 				<li>
-					<strong> Element Cancelation: </strong> Based on the <a href="#NullTable">Nullification Table</a>, both side's elemental point will be subtracted by the amount of the more powerful element point from the other side.
+					<strong> Element Nullification: </strong> Based on the <a href="#NullTable">Nullification Table</a>, both side's elemental point will be subtracted by the amount of the more powerful element point from the other side.
 				</li>
 			</ol>
 		</article>
