--- a/project2/documentation.html
+++ b/project2/documentation.html
@@ -89,7 +89,7 @@
 			<hr/>
 			<ul>
 				<li>
-					10/24/2017: Adding rules page
+					10/24/2017: Adding rules page, initialize score calculation.
 				</li>
 				<li>
 					10/23/2017:
