Adding some more score calculation

--- a/project2/documentation.html
+++ b/project2/documentation.html
@@ -73,10 +73,13 @@
 			<hr/>
 			<ul>
 				<li>
-					Open Iconic — <a href="https://www.useiconic.com/open">website</a>
+					Bubblegum Sans -- <a href="https://fonts.google.com/specimen/Bubblegum+Sans">google font</a>
 				</li>
 				<li>
-					Giphy  — <a href="https://giphy.com/">website</a>
+					Open Iconic -- <a href="https://www.useiconic.com/open">website</a>
+				</li>
+				<li>
+					Giphy -- <a href="https://giphy.com/">website</a>
 				</li>
 
 			</ul>
