--- a/project2/rule.html
+++ b/project2/rule.html
@@ -10,6 +10,7 @@
 
 	<link rel="stylesheet" href="./vendors/open-iconic/font/css/open-iconic.min.css">
 
+	<link rel="stylesheet" href="./css/animation.css" />
 	<link rel="stylesheet" href="./css/global.css" />
 	<link rel="stylesheet" href="./css/interface.css" />
 
