Adding equipment label

--- a/project2/index.html
+++ b/project2/index.html
@@ -29,6 +29,11 @@
 		<h1>Choose your avatar</h1>
 	</section>
 
+	<!-- <section id="TutorialOverlay">
+		<h1 >Seems like you are new here</h1>
+
+	</section> -->
+
 	<section id="InfoPopup">
 		<a class="InterfaceButton">
 			<span class="oi" data-glyph="flag"></span>
@@ -55,6 +60,9 @@
 
 		<div id="NPCSide" class="HalfPlayingBoard">
 			<div class="Hand"></div>
+			<div class="EquipmentLabel">
+				<h2>Equipment Limit : 3</h2>
+			</div>
 			<div class="Equipment FlexCenter"></div>
 			<div class="Stats">
 				<div class="Fire Point"></div>
@@ -72,6 +80,9 @@
 				<div class="Avatar FlexCenter"></div>
 				<div class="Earth Point"></div>
 				<div class="Aero Point"></div>
+			</div>
+			<div class="EquipmentLabel">
+				<h2>Equipment Limit : 3</h2>
 			</div>
 			<div class="Equipment FlexCenter"></div>
 			<div class="Hand"></div>
