--- a/project2/index.html
+++ b/project2/index.html
@@ -29,10 +29,10 @@
 		<h1>Choose your avatar</h1>
 	</section>
 
-	<!-- <section id="TutorialOverlay">
-		<h1 >Seems like you are new here</h1>
-
-	</section> -->
+    <section id="TutorialOverlay">
+		<h1 id="TutorialMessage">Seems like you are new here</h1>
+        
+	</section>
 
 	<section id="InfoPopup">
 		<a class="InterfaceButton">
