Adding tutorial script

--- a/project2/index.html
+++ b/project2/index.html
@@ -61,7 +61,7 @@
 		<div id="NPCSide" class="HalfPlayingBoard">
 			<div class="Hand"></div>
 			<div class="EquipmentLabel">
-				<h2>Equipment Limit : 3</h2>
+				<h2>Equipment Limit : </h2>
 			</div>
 			<div class="Equipment FlexCenter"></div>
 			<div class="Stats">
@@ -82,7 +82,7 @@
 				<div class="Aero Point"></div>
 			</div>
 			<div class="EquipmentLabel">
-				<h2>Equipment Limit : 3</h2>
+				<h2>Equipment Limit : </h2>
 			</div>
 			<div class="Equipment FlexCenter"></div>
 			<div class="Hand"></div>
@@ -117,6 +117,7 @@
 	<script src="./src/store.js" charset="utf-8"></script>
 	<script src="./src/giphy-table.js" charset="utf-8"></script>
 	<script src="./src/info-popup.js" charset="utf-8"></script>
+	<script src="./src/tutorial.js" charset="utf-8"></script>
 
 	<!-- Board section controller -->
 	<script src="./src/card.js" charset="utf-8"></script>
