--- a/project2/index.html
+++ b/project2/index.html
@@ -16,9 +16,12 @@
 
 	<link rel="stylesheet" href="./css/playing-board.css" />
 	<link rel="stylesheet" href="./css/hero-selection.css" />
+	<link rel="stylesheet" href="./css/tutorial.css" />
+
 
 	<link rel="stylesheet" href="./css/central-deck.css" />
 	<link rel="stylesheet" href="./css/card.css" />
+	<link rel="stylesheet" href="./css/point.css" />
 	<link rel="stylesheet" href="./css/index.css" />
 
 </head>
@@ -29,9 +32,9 @@
 		<h1>Choose your avatar</h1>
 	</section>
 
-    <section id="TutorialOverlay">
+	<section id="TutorialOverlay">
 		<h1 id="TutorialMessage">Seems like you are new here</h1>
-        
+
 	</section>
 
 	<section id="InfoPopup">
@@ -64,23 +67,11 @@
 				<h2>Equipment Limit : </h2>
 			</div>
 			<div class="Equipment FlexCenter"></div>
-			<div class="Stats">
-				<div class="Fire Point"></div>
-				<div class="Water Point"></div>
-				<div class="Avatar FlexCenter"></div>
-				<div class="Earth Point"></div>
-				<div class="Aero Point"></div>
-			</div>
+			<div class="Stats"></div>
 		</div>
 
 		<div id="PlayerSide" class="HalfPlayingBoard">
-			<div class="Stats">
-				<div class="Fire Point"></div>
-				<div class="Water Point"></div>
-				<div class="Avatar FlexCenter"></div>
-				<div class="Earth Point"></div>
-				<div class="Aero Point"></div>
-			</div>
+			<div class="Stats"></div>
 			<div class="EquipmentLabel">
 				<h2>Equipment Limit : </h2>
 			</div>
