Adding combat point changing'

--- a/project2/documentation.html
+++ b/project2/documentation.html
@@ -43,7 +43,7 @@
 			<hr/>
 			<ul>
 				<li>
-					The NPC has a fake "thinking time" untill it make a move. During this time, the cursor will turn into its progressing state.
+					The NPC has a fake "thinking phase" untill it makes a move. During this time, the cursor will turn into its progressing state.
 				</li>
 				<li>
 					The gifs are cached into a GIPHY_TABLE variable in localstorage, and has an expire cycle of 1 hour. This limits the amount of call necessary to Giphy while also provide optimal reloading experience.
