Combat seems to be working

--- a/project2/index.html
+++ b/project2/index.html
@@ -32,9 +32,12 @@
 		<h1>Choose your avatar</h1>
 	</section>
 
+	<!-- <section id="AnnounceOverlay">
+		<h1 id="AnnounceText"></h1>
+	</section> -->
+
 	<section id="TutorialOverlay">
 		<h1 id="TutorialMessage">Seems like you are new here</h1>
-
 	</section>
 
 	<section id="InfoPopup">
@@ -81,7 +84,7 @@
 
 	</section>
 
-	<section id="RightColumn" class="FlexCenter">
+	<section id="RightColumn">
 		<div id="NPCWins"></div>
 		<div id="CentralDeck">
 			<div class="CentralDeckCard">
