--- a/project2/rule.html
+++ b/project2/rule.html
@@ -113,7 +113,7 @@
 				In this phase, each side reveal their card, and the game will calculate who has the higher score by a process called <a href="#Nullification">"Nullification"</a>.
 			</p>
 			<p>
-				After the nullification, whoever has the higher combined score win the round, and the next round will commence upon which both player will go back to the <a href="#Prepare">prepare phase</a>.
+				After the nullification, whoever has the higher combined score win the round, and the next round will commence upon which both player will go back to the <a href="#Prepare">prepare phase</a>. The elemental points will keep add-on to what they already accumulated on the previous round.
 			</p>
 		</article>
 
