--- a/project2/documentation.html
+++ b/project2/documentation.html
@@ -19,7 +19,7 @@
 
 <body>
 
-	<section id="Interface">
+	<section id="Interface" class="SideBar">
 		<a class="InterfaceButton" href="./index.html">
 			<h3>play</h3>
 			<span class="oi" data-glyph="media-play"></span>
@@ -42,6 +42,9 @@
 			</h2>
 			<hr/>
 			<ul>
+				<li>
+					There is a cheating mechanism for the player. Simply highlight the score cards from the NPC side to see what element does the NPC have.
+				</li>
 				<li>
 					The NPC has a fake "thinking phase" untill it makes a move. During this time, the cursor will turn into its progressing state.
 				</li>
