--- a/project2/index.html
+++ b/project2/index.html
@@ -16,6 +16,8 @@
 
 	<link rel="stylesheet" href="./css/playing-board.css" />
 	<link rel="stylesheet" href="./css/hero-selection.css" />
+
+	<link rel="stylesheet" href="./css/announce.css" />
 	<link rel="stylesheet" href="./css/tutorial.css" />
 
 
@@ -28,26 +30,24 @@
 
 <body>
 
-	<section id="HeroSelectionOverlay">
+	<section id="HeroSelectionOverlay" class="Overlay">
 		<h1>Choose your avatar</h1>
 	</section>
 
-	<!-- <section id="AnnounceOverlay">
-		<h1 id="AnnounceText"></h1>
-	</section> -->
-
-	<section id="TutorialOverlay">
-		<h1 id="TutorialMessage">Seems like you are new here</h1>
+	<section id="AnnounceOverlay" class="Overlay">
+		<h1 id="AnnounceText">
+			Seems you are new here
+		</h1>
 	</section>
 
-	<section id="InfoPopup">
+	<section id="InfoPopup" class="SideBar">
 		<a class="InterfaceButton">
 			<span class="oi" data-glyph="flag"></span>
 			<h3 id="InfoText">your turn</h3>
 		</a>
 	</section>
 
-	<section id="Interface">
+	<section id="Interface" class="SideBar">
 		<a class="InterfaceButton ActiveButton">
 			<h3>play</h3>
 			<span class="oi" data-glyph="media-stop"></span>
@@ -112,6 +112,8 @@
 	<script src="./src/giphy-table.js" charset="utf-8"></script>
 	<script src="./src/info-popup.js" charset="utf-8"></script>
 	<script src="./src/tutorial.js" charset="utf-8"></script>
+	<script src="./src/announce.js" charset="utf-8"></script>
+	<script src="./src/interface.js" charset="utf-8"></script>
 
 	<!-- Board section controller -->
 	<script src="./src/card.js" charset="utf-8"></script>
