Finalize most UI. Thinking about adding winning round tracker next

--- a/project2/documentation.html
+++ b/project2/documentation.html
@@ -78,6 +78,9 @@
 				<li>
 					The card gif images were fetch from Giphy.com, using keywords associated with each element.
 				</li>
+				<li>
+					The works done in this project is authored by lab at mail dot rit dot edu, both CSS and JavaScript.
+				</li>
 				<li> License notice was taken from <a target="_blank" href="https://louisgv.github.io/a-jekyll-blog/">my blog</a>, which is also my design. </li>
 			</ul>
 		</article>
@@ -107,6 +110,15 @@
 			</h2>
 			<hr/>
 			<ul>
+				<li>
+					10/27/2017: Adding tutorial.
+				</li>
+				<li>
+					10/26/2017: Finalize NPC behavior.
+				</li>
+				<li>
+					10/25/2017: Finalize combat scoring mechanism.
+				</li>
 				<li>
 					10/24/2017: Adding rules page, initialize score calculation.
 				</li>
