Finalize scoring mechanism badge

--- a/project2/index.html
+++ b/project2/index.html
@@ -85,13 +85,17 @@
 	</section>
 
 	<section id="RightColumn">
-		<div id="NPCWins"></div>
+		<div class="WinBadgeContainer">
+			<div id="NPCWins"></div>
+		</div>
 		<div id="CentralDeck">
 			<div class="CentralDeckCard">
 				<h2>Draw card</h2>
 			</div>
 		</div>
-		<div id="PlayerWins"></div>
+		<div class="WinBadgeContainer">
+			<div id="PlayerWins"></div>
+		</div>
 	</section>
 
 	<footer class="Fixed FlexCenter">
