Refactor npc and player to share code

--- a/project2/index.html
+++ b/project2/index.html
@@ -118,6 +118,7 @@
 	<script src="./src/tutorial.js" charset="utf-8"></script>
 	<script src="./src/announce.js" charset="utf-8"></script>
 	<script src="./src/interface.js" charset="utf-8"></script>
+	<script src="./src/playing-board.js" charset="utf-8"></script>
 
 	<!-- Board section controller -->
 	<script src="./src/card.js" charset="utf-8"></script>
