Adding dialog with button

--- a/project2/documentation.html
+++ b/project2/documentation.html
@@ -20,11 +20,11 @@
 <body>
 
 	<section id="Interface" class="SideBar">
-		<a class="InterfaceButton" href="./index.html">
+		<a class="InterfaceButton" href="./index.html" target="_blank">
 			<h3>play</h3>
 			<span class="oi" data-glyph="media-play"></span>
 		</a>
-		<a class="InterfaceButton" href="./rule.html">
+		<a class="InterfaceButton" href="./rule.html" target="_blank">
 			<h3>rule</h3>
 			<span class="oi" data-glyph="book"></span>
 		</a>
