--- a/project2/index.html
+++ b/project2/index.html
@@ -35,15 +35,13 @@
 	</section>
 
 	<section id="AnnounceOverlay" class="Overlay">
-		<h1 id="AnnounceText">
-			Seems you are new here
-		</h1>
+		<h1 id="AnnounceText"></h1>
 	</section>
 
 	<section id="InfoPopup" class="SideBar">
 		<a class="InterfaceButton">
 			<span class="oi" data-glyph="flag"></span>
-			<h3 id="InfoText">your turn</h3>
+			<h3 id="InfoText"></h3>
 		</a>
 	</section>
 
@@ -52,11 +50,11 @@
 			<h3>play</h3>
 			<span class="oi" data-glyph="media-stop"></span>
 		</a>
-		<a class="InterfaceButton" href="./rule.html">
+		<a class="InterfaceButton" target="_blank" href="./rule.html">
 			<h3>rule</h3>
 			<span class="oi" data-glyph="book"></span>
 		</a>
-		<a class="InterfaceButton" href="./documentation.html">
+		<a class="InterfaceButton" target="_blank" href="./documentation.html">
 			<h3>doc</h3>
 			<span class="oi" data-glyph="document"></span>
 		</a>
