--- a/project2/rule.html
+++ b/project2/rule.html
@@ -20,7 +20,7 @@
 <body>
 
 	<section id="Interface" class="SideBar">
-		<a class="InterfaceButton" href="./index.html">
+		<a class="InterfaceButton" target="_blank" href="./index.html">
 			<h3>play</h3>
 			<span class="oi" data-glyph="media-play"></span>
 		</a>
@@ -28,7 +28,7 @@
 			<h3>rule</h3>
 			<span class="oi" data-glyph="book"></span>
 		</a>
-		<a class="InterfaceButton" href="./documentation.html">
+		<a class="InterfaceButton" target="_blank" href="./documentation.html">
 			<h3>doc</h3>
 			<span class="oi" data-glyph="document"></span>
 		</a>
