--- a/project2/documentation.html
+++ b/project2/documentation.html
@@ -43,7 +43,10 @@
 			<hr/>
 			<ul>
 				<li>
-					There is a cheating mechanism for the player. Simply highlight the score cards from the NPC side to see what element does the NPC have.
+					There is no 3rd-party JavaScript library used.
+				</li>
+				<li>
+					There is a <strong>cheating mechanism</strong> for the player. Simply highlight the score cards from the NPC side to see what element does the NPC have.
 				</li>
 				<li>
 					The NPC has a fake "thinking phase" untill it makes a move. During this time, the cursor will turn into its progressing state.
@@ -64,7 +67,7 @@
 					The game uses the fetch API, thus will only works on browser in this <a target="_blank" href="https://caniuse.com/promises/embed/agents=desktop">chart</a>
 				</li>
 				<li>
-					The game uses localstorage browser API to cache the state of the game as well as a giphy database.
+					The game uses localstorage browser API to cache the state of the tutorial, the game as well as a giphy database.
 				</li>
 				<li>
 					The game uses Array.from ES6 feature, thus will only works on browser in this <a target="_blank" href="http://kangax.github.io/compat-table/es6/#test-Array.from">chart</a>.
