--- a/week2/home/index.html
+++ b/week2/home/index.html
@@ -34,6 +34,17 @@
 
     </section>
 
+		<section id="Portfolio">
+			<h2>Portfolio</h2>
+
+			<div class="FlexSpaceAround ProjectLinksContainer">
+				<a class="BubbleButton FlexCenter" target="_blank" href="https://people.rit.edu/hhn2884/portfolio/">
+					Open in new tab
+				</a>
+			</div>
+
+		</section>
+
     <section id="Projects">
       <h2>Projects</h2>
 
