--- a/week2/home/index.html
+++ b/week2/home/index.html
@@ -39,7 +39,7 @@
 
 			<div class="FlexSpaceAround ProjectLinksContainer">
 				<a class="BubbleButton FlexCenter" target="_blank" href="https://people.rit.edu/hhn2884/portfolio/">
-					Open in new tab
+					Open
 				</a>
 			</div>
 
