--- a/week2/home/index.html
+++ b/week2/home/index.html
@@ -60,13 +60,20 @@
       <h2>Exercises</h2>
 			<br>
 
+			<h3>Week 13</h3>
+
+			<div class="FlexSpaceAround ProjectLinksContainer">
+				<a class="BubbleButton FlexCenter" href="https://people.rit.edu/hhn2884/230/week13/pixi-game/game.html">
+					pixi-game
+				</a>
+			</div>
+
 			<h3>Week 11</h3>
 
 			<div class="FlexSpaceAround ProjectLinksContainer">
 				<a class="BubbleButton FlexCenter" href="https://people.rit.edu/hhn2884/230/week11/framework/index.html">
 					framework
 				</a>
-
 			</div>
 
 			<h3>Week 9</h3>
