--- a/project3/index.html
+++ b/project3/index.html
@@ -4,16 +4,26 @@
 <head>
 	<meta charset="utf-8" />
 	<title>
-        FilthyGrub
+        taMAGGOTchi
 	</title>
+	<link rel="stylesheet" href="./index.css">
 </head>
 
 <body>
-
+	<!-- <div id="game-root"></div> -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pixi.js/4.6.0/pixi.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.0.5/howler.min.js" integrity="sha256-kIkROHue+GFp6vhajZDKle5ISIkWrxcJKHZwLzT893A=" crossorigin="anonymous"></script>
 
-    <script src="index.js" charset="utf-8"></script>
+	<script src="./components/Maggot.js" charset="utf-8"></script>
+
+	<script src="./utils/File.js" charset="utf-8"></script>
+	<script src="./utils/Store.js" charset="utf-8"></script>
+	<script src="./utils/Loader.js" charset="utf-8"></script>
+	<script src="./utils/DropZone.js" charset="utf-8"></script>
+	<script src="./utils/DragAndDrop.js" charset="utf-8"></script>
+	<script src="./utils/Zoom.js" charset="utf-8"></script>
+
+    <script src="./index.js" charset="utf-8"></script>
 </body>
 
 </html>
