--- a/project3/index.html
+++ b/project3/index.html
@@ -11,6 +11,7 @@
 
 <body>
 	<!-- <div id="game-root"></div> -->
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/js-sha3/0.6.1/sha3.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pixi.js/4.6.0/pixi.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.0.5/howler.min.js" integrity="sha256-kIkROHue+GFp6vhajZDKle5ISIkWrxcJKHZwLzT893A=" crossorigin="anonymous"></script>
 
