--- a/project1/proposal.html
+++ b/project1/proposal.html
@@ -23,13 +23,13 @@
 		<article class="FadeInArticle First">
 			<h2>concept</h2>
 			<hr>
-			<p>A digital poker mixed with Gwent and alchemy concepts</p>
+			<p> A digital pet game where the pet is a swarm of growing maggot and player feed them by droping unique images file into the game. </p>
 		</article>
 
 		<article class="FadeInArticle Second">
 			<h2>genre</h2>
 			<hr>
-			<p>Push your luck card game</p>
+			<p>Pet management game</p>
 		</article>
 
 		<article class="FadeInArticle Third">
@@ -41,18 +41,47 @@
 		<article class="FadeInArticle Forth">
 			<h2>story</h2>
 			<hr>
-			<p>The main purpose of this game is to be used as a supporting material for L'eau, my senior project. It does not have a story, but the artworks and contents will reflect the L'eau universe.</p>
+			<p> If there's somethin' strange in your neighborhood. </p>
+			<p>Who ya gonna call? </p>
+			<p>
+				(taMAGGOTchi!)
+			</p>
+			<p>
+				If it's somethin' weird an' it don't look good
+			</p>
+			<p>
+				Who ya gonna call?
+			</p>
+			<p>
+				(taMAGGOTchi!)
+			</p>
+
+
 		</article>
 
 		<article class="FadeInArticle Fifth">
 			<h2>aesthetics</h2>
 			<hr>
 			<h3>Graphic</h3>
-			<p>Abstract line sketch</p>
+			<p>
+				If it makes the player vomit, good. If it didn't, well too bad.
+			</p>
 			<h3>Music</h3>
-			<p>Ambient funk</p>
+			<p>
+				Horror-ish, or maybe the Gooey song by Glass Animals
+			</p>
 			<h3>Sound Effect</h3>
-			<p>Card drawing, card dealing, and card revealing</p>
+			<ul>
+				<li>
+					Maggot moving *squish squish*
+				</li>
+				<li>
+					Maggot eating *slurp slurp*
+				</li>
+				<li>
+					Maggot exploding *splurt*
+				</li>
+			</ul>
 		</article>
 
 		<article class="FadeInArticle Sixth">
@@ -60,20 +89,19 @@
 			<hr>
 			<h3>Mechanics</h3>
 			<p>
-				Player first choose their initial hero avatar. Each avatar represents a unique maximum amount of card in the deck and a unique probability to draw a certain type of card.
+				Play will be in charge of 9 initial maggots. They must feed these maggot with unique images then can find on the internet, or their personal images. The catch is, they cannot feed the same image twice! The area (in pixel) of the food item will be for
+				internal calculation. The maximum width of a food item will be cramped down to 100px. The height will be scaled by the original ratio accordingly.
 			</p>
-			<p>With the avatar, player proceeds to play with an NPC.</p>
-			<p>The game has 3 rounds, each round has 2 phases: <b>prepare</b> and <b>combat</b>. In the prepare phase, each player takes the turn either drawing a card or using a card on their hand. The card will not be revealed to the other player. In the combat
-				phase, players reveal their cards. Whoever has the stronger avatar win the round. Used cards are discarded, and the next round repeats the same process. Winner of 2 rounds wins the game.</p>
 
 			<h3>Control</h3>
-			<p>Mouse to interact with the menu UI, the cards, and the deck.</p>
+			<p>
+				Mouse to drag and drop image from the desktop to the game view. The file droped must be an image of either PNG, JPEG, maybe small GIF.
+			</p>
 
 			<h3>Onboarding</h3>
-			<p>On the player's very first round, they will be handhold on all available action in the game via overlay messages.</p>
-
-			<h3>Player learning</h3>
-			<p>The player need mainly luck to win the game.</p>
+			<p>
+				When player first arrived, they will see 9 maggots crawling on their screen, with instruction text on the left side telling them how to feed the maggots.
+			</p>
 
 		</article>
 
@@ -91,7 +119,12 @@
 		<article class="FadeInArticle Sixth">
 			<h2>developer</h2>
 			<hr>
-			<p>lab, gdd, interested in <a href="http://bfy.tw/DjIj">machine learning</a>, <a href="http://bfy.tw/DjIq">lifespan extension</a>, and <a href="http://bfy.tw/DjIr">decentralization</a></p>
+			<p>
+				lab, gdd, interested in <a href="http://bfy.tw/DjIj">machine learning</a>, <a href="http://bfy.tw/DjIq">lifespan extension</a>, and <a href="http://bfy.tw/DjIr">decentralization</a>
+			</p>
+			<p>
+				stoney, gdd, want to have a gaming job in California after graduation.
+			</p>
 		</article>
 
 	</section>
