--- a/project1/index.html
+++ b/project1/index.html
@@ -6,7 +6,7 @@
 	<link rel="shortcut icon" href="./media/favicon.png">
 	<meta name="viewport" content="width=device-width, initial-scale = 1.0, maximum-scale=1.0, user-scalable=no" />
 
-	<title>eau.web.meta</title>
+	<title>taMAGGOTchi.meta</title>
 	<meta name="description" content="This website is an advertisement for the supporting  l'eau - an adventure game - " />
 
 	<link rel="stylesheet" href="./css/global.css" />
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-	<img src="./media/concept_1.png" alt="Concept_Art" class="Concept">
+	<!-- <img src="./media/concept_1.png" alt="Concept_Art" class="Concept"> -->
 
 	<nav class="Absolute" id="Top">
 		<a class="BubbleButton FlexCenter" id="Documentation" href="./documentation.html"> document </a>
@@ -30,9 +30,9 @@
 
 	<section class="Absolute FlexCenter" id="Center">
 		<div id="Icon" class="Absolute"></div>
-		<h1 id="Title"> l'eau.web.meta </h1>
-		<h2 id="Subtitle"> [lo dɑt wɛb dɑt ˈmitə] </h2>
-		<h3 id="Description"> an alchemy poker game </h3>
+		<h1 id="Title"> taMAGGOTchi </h1>
+		<h2 id="Subtitle"> [ta ˈma-gət chē] </h2>
+		<h3 id="Description"> a disgusting pet game </h3>
 	</section>
 
 
