--- a/project1/proposal.html
+++ b/project1/proposal.html
@@ -109,9 +109,9 @@
 			<h2>screenshots</h2>
 			<hr>
 			<div class="ConceptContainer">
-				<img src="./media/concept_0.png" alt="Concept 0" class="Concept">
-				<img src="./media/concept_1.png" alt="Concept 1" class="Concept">
-				<img src="./media/concept_2.png" alt="Concept 2" class="Concept">
+				<img src="./media/concept_3.png" alt="Concept 0" class="Concept">
+				<img src="./media/concept_4.png" alt="Concept 1" class="Concept">
+				<img src="./media/concept_5.png" alt="Concept 2" class="Concept">
 			</div>
 		</article>
 
@@ -120,10 +120,10 @@
 			<h2>developer</h2>
 			<hr>
 			<p>
-				lab, gdd, interested in <a href="http://bfy.tw/DjIj">machine learning</a>, <a href="http://bfy.tw/DjIq">lifespan extension</a>, and <a href="http://bfy.tw/DjIr">decentralization</a>
+			<a href="https://people.rit.edu/hhn2884/portfolio">lab</a>, gdd, interested in <a href="http://bfy.tw/DjIj">machine learning</a>, <a href="http://bfy.tw/DjIq">lifespan extension</a>, and <a href="http://bfy.tw/DjIr">decentralization</a>
 			</p>
 			<p>
-				stoney, gdd, want to have a gaming job in California after graduation.
+				<a href="https://people.rit.edu/~sar9928/portfolio/">stoney</a>, gdd, want to have a gaming job in California after graduation.
 			</p>
 		</article>
 
