--- a/project1/proposal.html
+++ b/project1/proposal.html
@@ -23,7 +23,7 @@
 		<article class="FadeInArticle First">
 			<h2>concept</h2>
 			<hr>
-			<p> A digital pet game where the pet is a swarm of growing maggot and player feed them by droping unique images file into the game. </p>
+			<p> A digital pet game where the pet is a swarm of growing maggot and player feed them by dropping image file into the game. </p>
 		</article>
 
 		<article class="FadeInArticle Second">
