Update main page

--- a/week2/home/index.html
+++ b/week2/home/index.html
@@ -59,6 +59,16 @@
     <section id="Exercises">
       <h2>Exercises</h2>
 			<br>
+            <h3>Week 14</h3>
+
+            <div class="FlexSpaceAround ProjectLinksContainer">
+                <a class="BubbleButton FlexCenter" href="https://people.rit.edu/hhn2884/230/week14/abstract/index.html">
+                    abstract
+                </a>
+                <a class="BubbleButton FlexCenter" href="https://people.rit.edu/hhn2884/230/week14/hit-detection/index.html">
+                    hit-detection
+                </a>
+            </div>
 
 			<h3>Week 13</h3>
 
