--- a/week14/hit-detection/index.html
+++ b/week14/hit-detection/index.html
@@ -1,57 +1,23 @@
 <!doctype html>
 <html>
+
 <head>
-    <meta charset="utf-8">
-    <style>
-        svg { position:absolute }
-        #player { fill:red }
-    </style>
+	<meta charset="utf-8">
+	<style>
+		svg {
+			position: absolute
+		}
 
-     <script>
+		#player {
+			fill: red
+		}
+	</style>
 
-     "use strict";
-     let svg, xmlns, enemy, scoreElement, score, player;
-
-     function init(){
-	    svg = document.querySelector( 'svg' ),
-        xmlns = 'http://www.w3.org/2000/svg',
-        player = svg.children[ 0 ],
-        enemy = svg.children[1],
-        scoreElement = svg.children[2],
-        score = 0;
-        window.addEventListener( 'mousemove', hitTest );
-
-    	positionEnemy();
-	}
-
-    function positionEnemy() {
-      enemy.setAttribute( 'cx', Math.random() * window.innerWidth );
-      enemy.setAttribute( 'cy', Math.random() * window.innerHeight );
-    }
-
-    function destroyEnemy() {
-      score += 10;
-      scoreElement.textContent = 'score: ' + score;
-      positionEnemy();
-    }
-
-    function hitTest ( e ) {
-        let hitlist = svg.getIntersectionList( player.getBBox(), null );
-
-        if( hitlist.length > 1 ) {
-            destroyEnemy();
-        }
-
-        player.setAttribute( 'cx', e.clientX + 'px' );
-        player.setAttribute( 'cy', e.clientY + 'px' );
-    }
-
-    window.onload=init;
-
-    </script>
+	<script src="./index.js" charset="utf-8"></script>
 </head>
+
 <body>
-    <svg width='100%' height='100%'>
+	<svg width='100%' height='100%'>
         <circle id='player' r='50' cx='50%' cy='50%' />
         <circle id='enemy' r='20' cx='0' cy='0' />
         <text id="score" x="0" y="35" font-family="Verdana" font-size="35">
