--- a/project3/index.html
+++ b/project3/index.html
@@ -13,18 +13,20 @@
 	<!-- <div id="game-root"></div> -->
 	<script src="https://cdn.rawgit.com/maxkueng/victor/8383f436/build/victor.min.js" charset="utf-8"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/js-sha3/0.6.1/sha3.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/pixi.js/4.6.0/pixi.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.0.5/howler.min.js" integrity="sha256-kIkROHue+GFp6vhajZDKle5ISIkWrxcJKHZwLzT893A=" crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/pixi.js/4.6.0/pixi.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.0.5/howler.min.js" integrity="sha256-kIkROHue+GFp6vhajZDKle5ISIkWrxcJKHZwLzT893A=" crossorigin="anonymous"></script>
 
-
+	<!-- Components -->
 	<script src="./components/Maggot.js" charset="utf-8"></script>
 
+	<!-- Utilities -->
 	<script src="./utils/File.js" charset="utf-8"></script>
 	<script src="./utils/Store.js" charset="utf-8"></script>
 	<script src="./utils/Loader.js" charset="utf-8"></script>
 	<script src="./utils/DropZone.js" charset="utf-8"></script>
 	<script src="./utils/DragAndDrop.js" charset="utf-8"></script>
 	<script src="./utils/Zoom.js" charset="utf-8"></script>
+	<script src="./utils/Sound.js" charset="utf-8"></script>
 
     <script src="./index.js" charset="utf-8"></script>
 </body>
