--- a/project3/index.html
+++ b/project3/index.html
@@ -20,8 +20,10 @@
 	<script src="./components/Maggot.js" charset="utf-8"></script>
 	<script src="./components/Text.js" charset="utf-8"></script>
 	<script src="./components/UserInterface.js" charset="utf-8"></script>
+	<script src="./components/Bitemark.js" charset="utf-8"></script>
 
 	<!-- Utilities -->
+	<script src="./utils/Helper.js" charset="utf-8"></script>
 	<script src="./utils/File.js" charset="utf-8"></script>
 	<script src="./utils/Store.js" charset="utf-8"></script>
 	<script src="./utils/Loader.js" charset="utf-8"></script>
