--- a/project3/index.html
+++ b/project3/index.html
@@ -19,6 +19,7 @@
 	<!-- Components -->
 	<script src="./components/Maggot.js" charset="utf-8"></script>
 	<script src="./components/Text.js" charset="utf-8"></script>
+	<script src="./components/UserInterface.js" charset="utf-8"></script>
 
 	<!-- Utilities -->
 	<script src="./utils/File.js" charset="utf-8"></script>
@@ -29,7 +30,7 @@
 	<script src="./utils/Zoom.js" charset="utf-8"></script>
 	<script src="./utils/Sound.js" charset="utf-8"></script>
 
-    <script src="./index.js" charset="utf-8"></script>
+  <script src="./index.js" charset="utf-8"></script>
 </body>
 
 </html>
